--- a/LoyaltyCardsWebApi.API/appsettings.json
+++ b/LoyaltyCardsWebApi.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "@env('ConnectionStrings__DefaultConnection')"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
