--- a/LoyaltyCardsWebApi.API/appsettings.json
+++ b/LoyaltyCardsWebApi.API/appsettings.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "@env('ConnectionStrings__DefaultConnection')"
   },
+  "JWTSettings": {
+    "JWT_Issuer": "@env('JWTSettings__JWT_Issuer')",
+    "JWT_Audience": "@env('JWTSettings__JWT_Audience')",
+    "JWT_Secret": "@env('JWTSettings__JWT_Secret')"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
