--- a/LoyaltyCardsWebApi.API/appsettings.json
+++ b/LoyaltyCardsWebApi.API/appsettings.json
@@ -5,7 +5,8 @@
   "JWTSettings": {
     "JWT_Issuer": "@env('JWTSettings__JWT_Issuer')",
     "JWT_Audience": "@env('JWTSettings__JWT_Audience')",
-    "JWT_Secret": "@env('JWTSettings__JWT_Secret')"
+    "JWT_Secret": "@env('JWTSettings__JWT_Secret')",
+    "JWT_ExpirationMinutes": "@env('JWTSettings__ExpirationMinutes')"
   },
   "Logging": {
     "LogLevel": {
