--- a/tools/database/docker-compose.yml
+++ b/tools/database/docker-compose.yml
@@ -1,12 +1,36 @@
 services:
   postgres:
     image: postgres
-    container_name: postgres-container
+    container_name: LC-postgres-container
     environment:
       POSTGRES_USER: postgres
     ports:
       - "5432:5432"
     volumes:
       - ./postgres-data:/var/lib/postgresql/data
+    networks:
+      - LC-network
+    restart: unless-stopped
     env_file:
       - ../../.env
+  seq:
+    image: datalust/seq:latest
+    container_name: LC-seq
+    environment:
+      - ACCEPT_EULA=Y
+    ports:
+      - "5341:80"
+    volumes:
+      - ./seq-data:/data
+    networks:
+      - LC-network
+    restart: unless-stopped
+    env_file:
+      - ../../.env
+    depends_on:
+      - postgres
+  
+networks:
+  LC-network:
+    name: LC-network
+    driver: bridge
